# testbenchtask

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  mainapp.cpp
benchmark/: CMakeLists.txt  benchmark.cpp
include/: codility.h
src/: CMakeLists.txt  codility.cpp  main
unittest/: CMakeLists.txt  unittest.cpp
